Ensure copyright text aligns to right side of window

--- a/css/styles.css
+++ b/css/styles.css
@@ -507,6 +507,9 @@ header.hero {
     margin: 0;
     margin-left: auto;
     text-align: right;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .copyright p {
